# AI-Travel-Itinerary-Planner

./: .gitignore  README.md  pyproject.toml
src/mini2/: app.py
tests/: test_app.py
