[project]
name = "mini2"
version = "0.1.0"
description = ""
authors = [
    {name = "vicpanteliou",email = "victoriapanteliou@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "langchain-community (>=0.3.30,<0.4.0)",
    "ddgs (>=9.6.0,<10.0.0)",
    "langgraph (>=0.6.8,<0.7.0)"
]

[tool.poetry]
packages = [{include = "mini2", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
